--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,4 @@ image:
 
 tasks:
   - init: pipenv install -e .
-
-vscode:
-  extensions:
-    - hbenl.vscode-test-explorer@2.19.1:GtY0wSp3pjUeyKXi8mFMnQ==
-    - littlefoxteam.vscode-python-test-adapter@0.4.5:AjFDI5oxInml/vtCNspL6w==
+    command: pipenv shell
